<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.task_screen.TaskFragment">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/close_task_edit"
            android:src="@drawable/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/save_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/save_task"
            android:textAllCaps="true"
            android:textColor="@color/blue_light_theme"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/close_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/close_button" />


        <EditText
            android:id="@+id/edit_text_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_main_rv"
            android:gravity="top|start"
            android:hint="@string/hint_edit_add_task"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="100dp"
            android:paddingHorizontal="16dp"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/close_button" />


        <TextView
            android:id="@+id/importance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/importance"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_task" />

        <Spinner
            android:id="@+id/importance_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            app:layout_constraintStart_toStartOf="@id/importance_title"
            app:layout_constraintTop_toBottomOf="@id/importance_title" />


        <View
            android:id="@+id/first_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_light_light_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/importance_spinner" />

        <LinearLayout
            android:id="@+id/deadline_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_line">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_deadline"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/deadline_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/blue_light_theme"
                android:textSize="14sp"
                tools:text="2 июня 2021" />

        </LinearLayout>


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/deadline_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:thumbTint="@color/blue_light_theme"
            android:thumbTintMode="src_atop"
            app:layout_constraintBottom_toBottomOf="@+id/deadline_linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/deadline_linear" />


        <CalendarView
            android:id="@+id/deadline_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/deadline_linear" />


        <View
            android:id="@+id/second_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_light_light_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deadline_calendar" />


        <TextView
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:clickable="true"
            android:drawablePadding="17dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/delete_text"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
